# agones

./: .dockerignore  .gcloudignore  .gitattributes  .gitignore  tools.go
.github/workflows/: fossa.yml
cmd/allocator/: Dockerfile  Dockerfile.debug  main.go
cmd/controller/: Dockerfile  Dockerfile.debug
cmd/extensions/: Dockerfile  Dockerfile.debug  main.go
cmd/ping/: Dockerfile  Dockerfile.debug  main.go
cmd/processor/: Dockerfile  Dockerfile.debug  main.go
cmd/sdk-server/: Dockerfile  Dockerfile.debug  Dockerfile.windows
examples/allocation-endpoint/: Makefile
examples/allocator-client/: main.go
examples/autoscaler-wasm/: Makefile  go.mod  main.go  model.go
examples/autoscaler-webhook/: Dockerfile  Makefile  main.go
examples/cpp-simple/: Dockerfile  Makefile  server.cc
examples/crd-client/: Dockerfile  Makefile  main.go
examples/custom-controller/: Dockerfile  Makefile  main.go
examples/nodejs-simple/: Dockerfile  Makefile
examples/rust-simple/: Cargo.toml  Dockerfile  Makefile
examples/simple-game-server/: .dockerignore  Dockerfile  Dockerfile.windows  Makefile  handlers.go  main.go
examples/simple-genai-server/: Dockerfile  Makefile  main.go
examples/supertuxkart/: Dockerfile  Makefile  main.go  main_test.go  server_config.xml
examples/unity-simple/: Dockerfile  Makefile
examples/xonotic/: Dockerfile  Dockerfile.windows  Makefile  main.go
pkg/gameserverallocations/: controller.go  controller_test.go
pkg/gameservers/: controller.go  controller_test.go  gameservers.go  gameservers_test.go
pkg/processor/: client.go  grpc.go
pkg/sdk/: sdk.pb.go  sdk.pb.gw.go  sdk_grpc.pb.go
sdks/cpp/: CMakeLists.txt  Makefile
sdks/go/: alpha.go  alpha_test.go  beta.go  beta_test.go  (+2 more)
sdks/python/: pyproject.toml
site/: .gcloudignore  config.toml  handler.go  handler_test.go  htmltest.yaml  main.go
(+215 files in other folders)
